@@ -33,6 +33,7 @@ Bug fixes
  * ``UserAttributeSimilarityValidator`` is now correctly enforced on user creation / editing forms (Tim Heap)
  * Focal area removal not working in IE11 and MS Edge (Thibaud Colas)
  * Rewrite password change feedback message to be more user-friendly ( Casper Timmers)
+ * Correct dropdown arrow styling in Firefox, IE11 (Janneke Janssen, Alexs Mathilda)
 
 
 Upgrade considerations
